<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="title">Netology. University of Internet Professions of the Future</string>
    <string name="date">17.07.2022</string>
    <string name="text">Hi, this is a new Netology! Once upon a time, Netology began with intensive courses in online marketing. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes them want more, aim higher, run faster. Our mission is to help us embark on the path of growth and start a chain of changes → http://netolo.gy/fybС</string>
    <string name="avatar_description">avatar</string>
    <string name="menu_desription">menu</string>
    <string name="shareCount">5</string>
    <string name="description_views">views</string>
    <string name="viewsCount">5</string>
    <string name="likeDescription">5</string>
    <string name="menuDescription">5</string>
    <string name="shareDescription">10</string>
    <string name="viewsDescription">10</string>
</resources>